--- a/src/style.css
+++ b/src/style.css
@@ -1,3 +1,8 @@
+body {
+  min-height: 100vh;
+  display: flex;
+  flex-direction: column;
+}
 * {
     margin: 0;
     padding: 0;
@@ -9,7 +14,10 @@
     margin: 20px auto;
     letter-spacing: 1px;
   }
-  
+  .destinacije{
+    margin-bottom: 30px;
+  }
+
   h1 {
     margin-bottom: 20px;
     text-align: center;
