--- a/src/components/Footer.css
+++ b/src/components/Footer.css
@@ -6,6 +6,7 @@
     justify-content: center;
     align-items: center;
     height: 100%;
+    margin-top: 400px;
   }
   
   .footer-subscription {
