--- a/src/components/Footer.css
+++ b/src/components/Footer.css
@@ -1,5 +1,5 @@
 .footer-container {
-    background-color: #242424;
+    background-color: #0e0d34;
     padding: 2rem 0 1rem 0;
     display: flex;
     flex-direction: column;
