--- a/src/components/Rezervisana.css
+++ b/src/components/Rezervisana.css
@@ -83,9 +83,9 @@
     margin-bottom: -60px;
   }
   
-  .cards2 > h1 {
+  /*.cards2 > h1 {
     margin-top: -80px;
-  }
+  }*/
   
   p {
     text-align: center;
